# openmodelica-cxx-dll

./: README.md
c++/: .gitignore  CMakeLists.txt  mock.cc  mock.h
modelica/: CallDLL.mo
